--- a/errors/404.org
+++ b/errors/404.org
@@ -4,7 +4,7 @@
 #+html_head: <link rel="stylesheet" href="/resources/style/errors.min.css" type="text/css" />
 #+include: "../resources/preamble.html" export html
 
-No sign of that page anywhere
+No sign of that page anywhere...
 
 #+attr_html: :class btn :style text-align:center
 [[https://orgmode.org][Homepage]]
