--- a/elpa.org
+++ b/elpa.org
@@ -69,4 +69,4 @@ See the [[https://www.gnu.org/software/emacs/manual/html_node/emacs/Packages.htm
   :CUSTOM_ID: questions
   :END:
 
-Report any problem and ask any question on the Org mode [[https://orgmode.org/contribute.html#mailing-list][mailing list]].
+Report any problem and ask any question on the Org mode [[https://orgmode.org/worg/org-mailing-list.html][mailing list]].
