index.org: Update link to bzg's homepage

--- a/index.org
+++ b/index.org
@@ -51,7 +51,7 @@
     <a target="new" href="https://staff.science.uva.nl/~dominik/"
        style="font-weight:500; color:inherit">Carsten Dominik</a>
     in <a target="new" href="/manual/History-and-Acknowledgments.html" style="color:#6e6e6e">2003</a>,
-    maintained by <a target="new" href="https://bzg.fr" style="font-weight:500; color:inherit">Bastien Guerry</a>
+    maintained by <a target="new" href="https://bzg.fr/en/" style="font-weight:500; color:inherit">Bastien Guerry</a>
     and developed by
     <a href="https://orgmode.org/org.html#History-and-Acknowledgments" style="color:#6e6e6e">many others</a>.</p>
 </div>
