--- a/index.org
+++ b/index.org
@@ -30,15 +30,7 @@
       <a href="https://liberapay.com/bzg" title="Donations always help"
          style="font-weight: bold; display: inline-block">
         <img class="inline" src="/resources/img/external/librepay.svg" alt="Liberapay logo"/>
-        Liberapay</a>&ensp;
-      <a href="https://github.com/sponsors/bzg" title="Donations always help"
-         style="font-weight: bold; display: inline-block">
-        <img class="inline" src="/resources/img/external/github.svg" alt="GitHub logo"/>
-        GitHub</a>&ensp;
-      <a href="https://www.paypal.com/paypalme/bzg/10" title="Donations always help"
-         style="font-weight: bold; display: inline-block">
-        <img class="inline" src="/resources/img/external/paypal.svg" alt="Paypal logo"/>
-        PayPal</a></p>
+        Liberapay</a></p>
     <meta itemprop="operatingSystem" content="Linux, MacOS, Windows">
     <meta itemprop="softwareVersion" content="9.3.8">
     <meta itemprop="datePublished" content="2020-08-07">
