--- a/ja/index.org
+++ b/ja/index.org
@@ -48,7 +48,7 @@
 :HTML_CONTAINER_CLASS: columns no-heading
 :END:
 ** 機能
-@@html:<a href="../features.html">@@
+@@html:<a href="/features.html">@@
 #+attr_html: :alt Three stars :title 使いたい機能を探してみましょう。
 [[file:../resources/img/stars.svg]]
 
@@ -62,14 +62,14 @@
 @@html:</a>@@
 
 ** クイックスタート
-@@html:<a href="../quickstart.html">@@
+@@html:<a href="/quickstart.html">@@
 #+attr_html: :alt Running stickfigure :title 使い始めると、もう止められません。
 [[file:../resources/img/quickstart.svg]]
 
 @@html:</a>@@
 
 ** コントリビュート
-@@html:<a href="../worg/org-contribute.html">@@
+@@html:<a href="/worg/org-contribute.html">@@
 #+attr_html: :alt Git branch symbol :title 皆さんの貢献で支えられています。
 [[file:../resources/img/contribute.svg]]
 
