--- a/index.org
+++ b/index.org
@@ -30,7 +30,7 @@
     <p>Org project: <a href="https://sr.ht/~bzg/org">https://sr.ht/~bzg/org</a></p>
     <p class="bubble">
       Support via&ensp;
-      <a href="https://liberapay.com/bzg" title="Donations always help"
+      <a href="https://liberapay.com/org-mode" title="Donations always help"
          style="font-weight: bold; display: inline-block">
         <img class="inline" src="/resources/img/external/librepay.svg" alt="Liberapay logo"/>
         Liberapay</a></p>
