--- a/index.org
+++ b/index.org
@@ -209,3 +209,4 @@ support for Org files.
 
 - *Vim* : [[https://github.com/kristijanhusak/orgmode.nvim][orgmode.nvim]], [[https://github.com/jceb/vim-orgmode][vim-orgmode]], and [[https://github.com/axvr/org.vim][org.vim]]
 - *Atom* : [[https://atom.io/packages/org-mode][org-mode]]
+- *VS Codium* : [[https://github.com/vscode-org-mode/vscode-org-mode][vscode-org-mode]]
