Use badge links in homepage banner
Badge files were obtained from the following URLs:

- sr.ht project
  https://shields.io/badge/sr.ht-Project-504D94?logo=data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiIHN0YW5kYWxvbmU9Im5vIj8+CjxzdmcKICAgdmlld0JveD0iMCAwIDUxMiA1MTIiCiAgIHZlcnNpb249IjEuMSIKICAgaWQ9InN2ZzQiCiAgIHNvZGlwb2RpOmRvY25hbWU9InNvdXJjZWh1dC5zdmciCiAgIGlua3NjYXBlOnZlcnNpb249IjEuMi4xICg5YzZkNDFlNDEwLCAyMDIyLTA3LTE0KSIKICAgeG1sbnM6aW5rc2NhcGU9Imh0dHA6Ly93d3cuaW5rc2NhcGUub3JnL25hbWVzcGFjZXMvaW5rc2NhcGUiCiAgIHhtbG5zOnNvZGlwb2RpPSJodHRwOi8vc29kaXBvZGkuc291cmNlZm9yZ2UubmV0L0RURC9zb2RpcG9kaS0wLmR0ZCIKICAgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIgogICB4bWxuczpzdmc9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KICA8ZGVmcwogICAgIGlkPSJkZWZzOCIgLz4KICA8c29kaXBvZGk6bmFtZWR2aWV3CiAgICAgaWQ9Im5hbWVkdmlldzYiCiAgICAgcGFnZWNvbG9yPSIjZmZmZmZmIgogICAgIGJvcmRlcmNvbG9yPSIjOTk5OTk5IgogICAgIGJvcmRlcm9wYWNpdHk9IjEiCiAgICAgaW5rc2NhcGU6c2hvd3BhZ2VzaGFkb3c9IjAiCiAgICAgaW5rc2NhcGU6cGFnZW9wYWNpdHk9IjAiCiAgICAgaW5rc2NhcGU6cGFnZWNoZWNrZXJib2FyZD0iMCIKICAgICBpbmtzY2FwZTpkZXNrY29sb3I9IiNkMWQxZDEiCiAgICAgc2hvd2dyaWQ9ImZhbHNlIgogICAgIGlua3NjYXBlOnpvb209IjEuNjcxODc1IgogICAgIGlua3NjYXBlOmN4PSIyNDUuNTMyNzEiCiAgICAgaW5rc2NhcGU6Y3k9IjI1Ni41OTgxMyIKICAgICBpbmtzY2FwZTp3aW5kb3ctd2lkdGg9IjE0ODYiCiAgICAgaW5rc2NhcGU6d2luZG93LWhlaWdodD0iMTA2MyIKICAgICBpbmtzY2FwZTp3aW5kb3cteD0iMjk3OCIKICAgICBpbmtzY2FwZTp3aW5kb3cteT0iMzEwIgogICAgIGlua3NjYXBlOndpbmRvdy1tYXhpbWl6ZWQ9IjAiCiAgICAgaW5rc2NhcGU6Y3VycmVudC1sYXllcj0ic3ZnNCIgLz4KICA8cGF0aAogICAgIGQ9Ik0yNTYgOEMxMTkgOCA4IDExOSA4IDI1NnMxMTEgMjQ4IDI0OCAyNDggMjQ4LTExMSAyNDgtMjQ4UzM5MyA4IDI1NiA4em0wIDQ0OGMtMTEwLjUgMC0yMDAtODkuNS0yMDAtMjAwUzE0NS41IDU2IDI1NiA1NnMyMDAgODkuNSAyMDAgMjAwLTg5LjUgMjAwLTIwMCAyMDB6IgogICAgIGlkPSJwYXRoMiIKICAgICBzdHlsZT0iZmlsbDojZmZmZmZmIiAvPgo8L3N2Zz4K
- report bug
  https://shields.io/badge/-report%20bug-504D94?&logo=data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiIHN0YW5kYWxvbmU9Im5vIj8+CjxzdmcKICAg

--- a/index.org
+++ b/index.org
@@ -20,14 +20,16 @@
     <p>
       A <a href="https://www.gnu.org/software/emacs/" style="color: inherit; font-weight: bold; font-style: italic;"
            title="An extensible, customizable, free/libre text editor">GNU Emacs</a>
-      major mode for <span itemprop="applicationCategory"> keeping notes, authoring documents, 
+      major mode for <span itemprop="applicationCategory"> keeping notes, authoring documents,
       computational notebooks, literate programming, maintaining to-do lists, planning
       projects, and more &mdash; in a fast and effective plain text
       system.</p>
-    <p>Install via <a title="Go to the GNU ELPA website" href="https://elpa.gnu.org/">GNU ELPA</a>: <code>M-x package-install RET org RET</code></p>
-    <p>Download: <code>git clone git://git.sv.gnu.org/emacs/org-mode.git</code></p>
-    <p>Bug reports: <code>emacs-orgmode@gnu.org</code></p>
-    <p>Org project: <a href="https://sr.ht/~bzg/org">https://sr.ht/~bzg/org</a></p>
+    <p><a href="https://elpa.gnu.org/packages/org.html"><img src="https://elpa.gnu.org/packages/org.svg" alt="Install from ELPA" /></a>
+      <a href="https://sr.ht/~bzg/org"><img src="/resources/img/badge-srht-project.svg" alt="sr.ht project page"/></a>
+      <a href="mailto:emacs-orgmode@gnu.org?subject=[BUG] <short description>"><img src="/resources/img/badge-bug-report.svg" alt="Report bug" /></a>
+      <a href="mailto:emacs-orgmode@gnu.org"><img src="/resources/img/badge-feedback.svg" alt="Send feedback" /></a></p>
+    <p><span style="color: #567b70;font-family: var(--sans);font-size: 0.9em;">Repository</span>
+      <code>git clone git://git.sv.gnu.org/emacs/org-mode.git</code></p>
     <p class="bubble">
       Support via&ensp;
       <a href="https://liberapay.com/org-mode" title="Donations always help"
